--- a/index.html
+++ b/index.html
@@ -41,37 +41,37 @@
         <h1 class="heading"> how to prevent Virus</h1>
         <div class="box-container">
             <div class="box">
-                <img src="./images/pre-1.png" alt="">
+                <img src="pre-1.png" alt="">
                 <h3>Sanitise the surroundings</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
 
             <div class="box">
-                <img src="./images/pre-2.png" alt="">
+                <img src="pre-2.png" alt="">
                 <h3>Maintain Social Distancing</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
 
             <div class="box">
-                <img src="./images/pre-3.png" alt="">
+                <img src="pre-3.png" alt="">
                 <h3>Don't touch your face</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
 
             <div class="box">
-                <img src="./images/pre-4.png" alt="">
+                <img src="pre-4.png" alt="">
                 <h3>Wash your Hands</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
 
             <div class="box">
-                <img src="./images/pre-5.png" alt="">
+                <img src="pre-5.png" alt="">
                 <h3>Cover your face</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
 
             <div class="box">
-                <img src="./images/pre-6.png" alt="">
+                <img src="pre-6.png" alt="">
                 <h3>Use face mask</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quo? Corporis harum tempore officiis dolores. Officiis odio repellendus molestias officia sint sapiente dolore commodi quis accusantium nostrum nisi, velit quae?</p>
             </div>
@@ -88,27 +88,27 @@
         <div class="columnn">
             <div class="box-container">
                 <div class="box">
-                    <img src="./images/symp-a.png" alt="">
+                    <img src="symp-a.png" alt="">
                     <h3>Dry Cough</h3>
                 </div>
                 <div class="box">
-                    <img src="./images/symp-b.png" alt="">
+                    <img src="symp-b.png" alt="">
                     <h3>Sore Throat</h3>
                 </div>
                 <div class="box">
-                    <img src="./images/symp-c.png" alt="">
+                    <img src="symp-c.png" alt="">
                     <h3>Cold</h3>
                 </div>
                 <div class="box">
-                    <img src="./images/symp-d.png" alt="">
+                    <img src="symp-d.png" alt="">
                     <h3>Fever</h3>
                 </div>
                 <div class="box">
-                    <img src="./images/symp-e.png" alt="">
+                    <img src="symp-e.png" alt="">
                     <h3>Headache</h3>
                 </div>
                 <div class="box">
-                    <img src="./images/symp-f.png" alt="">
+                    <img src="symp-f.png" alt="">
                     <h3>Vomiting</h3>
                 </div>
             </div>
@@ -123,7 +123,7 @@
             <div class="box-container">
                 <h3 class="title">Things To Do</h3>
                 <div class="box">
-                    <img src="./images/do-img1.png" alt="">
+                    <img src="do-img1.png" alt="">
                     <div class="info">
                         <h3>Wash your Hands</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="./images/do-img2.png" alt="">
+                    <img src="do-img2.png" alt="">
                     <div class="info">
                         <h3>Wear face mask</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="./images/do-img3.png" alt="">
+                    <img src="do-img3.png" alt="">
                     <div class="info">
                         <h3>Stay at Home if not feeling well</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -155,7 +155,7 @@
             <div class="box-container">
                 <h3 class="title">Things Not To Do</h3>
                 <div class="box">
-                    <img src="./images/dont-img1.png" alt="">
+                    <img src="dont-img1.png" alt="">
                     <div class="info">
                         <h3>Avoid close contact with Animals</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="./images/dont-img2.png" alt="">
+                    <img src="dont-img2.png" alt="">
                     <div class="info">
                         <h3>Avoid close contact with People</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="./images/dont-img3.png" alt="">
+                    <img src="dont-img3.png" alt="">
                     <div class="info">
                         <h3>Avoid going to crowded places</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nihil minus numquam sapiente soluta assumenda officiis? Consequatur doloremque voluptatum harum delectus placeat iste voluptates quisquam pariatur quos temporibus?
@@ -192,7 +192,7 @@
         <h1 class="heading">Consult our Doctors</h1>
         <div class="box-container">
             <div class="box">
-                <img src="./images/doc1.png" alt="">
+                <img src="doc1.png" alt="">
                 <h3>Dr.XYZ</h3>
                 <span>M.B.B.S.</span>
                 <div class="share">
@@ -204,7 +204,7 @@
             </div>
 
             <div class="box">
-                <img src="./images/doc2.png" alt="">
+                <img src="doc2.png" alt="">
                 <h3>Dr.ABC</h3>
                 <span>M.B.B.S.</span>
                 <div class="share">
@@ -216,7 +216,7 @@
             </div>
 
             <div class="box">
-                <img src="./images/doc3.png" alt="">
+                <img src="doc3.png" alt="">
                 <h3>Ms. PQRS</h3>
                 <span>Senior Nurse</span>
                 <div class="share">
